# mini-cli-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  progress-log.md
examples/: main.cpp
include/: App.hpp  Option.hpp
include/mini_cli/: App.hpp
